change to helth chart

--- a/KK-DataViz/index.html
+++ b/KK-DataViz/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kendo UI DataViz</title>
+        <title>KK Health Monitor</title>
         <meta charset="UTF-8" />
 
         <link href="kendo/styles/kendo.dataviz.mobile.min.css" rel="stylesheet" />
@@ -16,68 +16,38 @@
         <script src="kendo/js/jquery.min.js"></script>
         <script src="kendo/js/kendo.dataviz.mobile.min.js"></script>
 
-        <script src="scripts/app.js"></script>
-        <script src="scripts/pie-chart.js"></script>
-        <script src="scripts/gauge.js"></script>
-        <script src="scripts/qr-code.js"></script>
-        <script src="scripts/stock-chart.js"></script>
+        <script src="scripts/app.js"></script>        
+        <script src="scripts/capture-health.js"></script>
+        <script src="scripts/health-chart.js"></script>
     </head>
 
     <body>
-        <!--Pie chart-->
-        <div id="tabstrip-pie-chart"  
+        <!--health chart-->
+        <div id="tabstrip-health-chart"
              data-role="view" 
-             data-title="Pie Chart" 
-             data-show="app.pieChart.createPieChart" 
-             data-hide="app.pieChart.unbindResizeEvent" 
-             data-stretch="true">
-
-            <div id="pie-chart"></div>
-
-        </div>
-
-        <!--Gauge-->
-        <div id="tabstrip-gauge"
-             data-role="view" 
-             data-title="Gauge" 
-             data-show="app.gauge.createGauge" 
-             data-hide="app.gauge.unbindResizeEvent" 
-             data-stretch="true">
-
-            <div id="gauge-wrap" data-role="content">
-                <div id="gauge"></div>
-                <div class="widget-content">
-                    <input id="gauge-value" type="range">
-                </div>
-            </div>
-
-        </div>
-
-        <!--QR code-->
-        <div id="tabstrip-qrcode"  
-             data-role="view" 
-             data-title="QR Code" 
-             data-show="app.qrcode.createQRCode">
-
-            <div data-role="content">
-                <div id="qrcode"></div>
-                <div class="widget-content">
-                    <input type="text" id="qrcode-value" value="http://www.icenium.com/">
-                    <a data-role="button" id="qrcode-generate">Update QR</a>
-                </div>
-            </div>
-
-        </div>
-
-        <!--Stock chart-->
-        <div id="tabstrip-stock-chart"
-             data-role="view" 
-             data-title="Stock Chart"
-             data-show="app.stockChart.createStockChart" 
-             data-hide="app.stockChart.unbindResizeEvent"
+             data-title="Health Monitor"
+             data-show="app.healthChart.createChart" 
+             data-hide="app.healthChart.unbindResizeEvent"
              data-stretch="true">
             
-            <div id="stock-chart"></div>
+            <div id="healthChart"></div>
+        </div>
+        
+        <!--capture health-->
+        <div id="tabstrip-capture-health"  
+             data-role="view" 
+             data-title="Capture health" 
+             data-show="app.captureHealth.createView">
+
+            <div data-role="content">
+                <div class="widget-content">
+                    Todays Calories and Fat <br/>
+                    Calories : <input type="text" id="calorieForToday" value="10"><br/>
+                    Fat : <input type="text" id="calorieForToday" value="20">
+                    <hr/>
+                    <a data-role="button" id="btnCaptureHealth">Capture health for today</a>
+                </div>                
+            </div>
 
         </div>
 
@@ -88,7 +58,6 @@
             <!--Header-->
             <div data-role="header">
                 <div data-role="navbar">
-                    <a data-align="right" data-role="button" data-click="app.changeSkin">Flat</a>
                     <span data-role="view-title"></span>
                 </div>
             </div>
@@ -96,10 +65,8 @@
             <!--Footer-->
             <div data-role="footer">
                 <div data-role="tabstrip">
-                    <a href="#tabstrip-pie-chart" data-icon="globe">Pie Chart</a>
-                    <a href="#tabstrip-gauge" data-icon="recents">Gauge</a>
-                    <a href="#tabstrip-qrcode" data-icon="camera">QR Code</a>
-                    <a href="#tabstrip-stock-chart" data-icon="featured">Stock Chart</a>
+                    <a href="#tabstrip-health-chart" data-icon="featured">Health Monitor</a>
+                    <a href="#tabstrip-capture-health" data-icon="camera">Capture</a>                    
                 </div>
             </div>
 
